--- a/admin.html
+++ b/admin.html
@@ -2,214 +2,144 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Beach House Admin v2.9</title>
+<title>Beach House Admin v3.0</title>
 <style>
-html,body{height:100%;margin:0;padding:0;font-family:Arial,sans-serif;background:linear-gradient(135deg,#0072ff,#00c6ff);color:#fff;}
-.container{width:95%;max-width:1000px;margin:auto;padding:20px;}
-h1,h2,h3{text-align:center;text-shadow:1px 1px 5px rgba(0,0,0,0.3);}
-input,button,textarea{padding:10px;margin:5px;border-radius:10px;border:none;}
-button{cursor:pointer;font-weight:bold;background:#005dbf;color:#fff;transition:.3s;}
-button:hover{background:#003f7f;}
-.tabs{display:flex;justify-content:center;margin-top:20px;}
-.tab{padding:10px 20px;margin:0 5px;border-radius:10px;background:rgba(0,0,0,0.2);cursor:pointer;}
-.tab.active{background:rgba(255,255,255,0.2);}
-.section{display:none;margin-top:20px;}
-.section.active{display:block;}
-table{width:100%;border-collapse:collapse;background:rgba(255,255,255,0.1);border-radius:10px;overflow:hidden;}
-th,td{padding:10px;border:1px solid rgba(255,255,255,0.3);text-align:center;}
-ul{list-style:none;padding:0;}
-li{background:rgba(255,255,255,0.1);margin:5px 0;padding:10px;border-radius:10px;display:flex;justify-content:space-between;align-items:center;}
-li button{background:#00bfff;padding:5px 10px;}
-li button:hover{background:#008fcc;}
+body{margin:0;padding:0;font-family:Arial;background:#e0f7ff;}
+header{background:#0077cc;color:white;padding:15px;text-align:center;font-size:24px;}
+main{padding:20px;display:flex;flex-direction:column;gap:15px;}
+button{background:#0077cc;color:white;border:none;padding:8px 12px;border-radius:5px;cursor:pointer;}
+input,textarea,select{padding:6px;border-radius:4px;border:1px solid #ccc;width:100%;}
+table{width:100%;border-collapse:collapse;}
+th,td{border:1px solid #0077cc;padding:6px;text-align:left;}
+.tab{margin-top:10px;}
 </style>
+<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 </head>
 <body>
-<div class="container">
-<h1>Beach House Admin Dashboard v2.9</h1>
-
-<div class="tabs">
-  <div class="tab active" data-tab="guests">Guests</div>
-  <div class="tab" data-tab="requests">Work Requests</div>
-  <div class="tab" data-tab="messages">Messages</div>
-  <div class="tab" data-tab="controls">Controls</div>
+<header>Beach House Admin v3.0</header>
+<main>
+<div class="tab">
+<h3>Schedule Guest</h3>
+<input id="guest-lastname" placeholder="Guest Last Name">
+<input type="date" id="start-date">
+<input type="date" id="end-date">
+<button id="add-guest-btn">Add Guest</button>
 </div>
 
-<!-- Guests -->
-<div class="section active" id="guests">
-<h2>Schedule Guest</h2>
-<input type="text" id="guestLastName" placeholder="Guest Last Name">
-<input type="date" id="startDate">
-<input type="date" id="endDate">
-<button id="addGuestBtn">Add Guest</button>
-<p id="guestStatus"></p>
-
-<h2>Current Guests</h2>
-<table id="guestsTable">
-<tr><th>Last Name</th><th>Start</th><th>End</th><th>Days Left</th><th>Actions</th></tr>
+<div class="tab">
+<h3>Current Guests</h3>
+<table id="guest-table">
+<thead>
+<tr><th>Last Name</th><th>Start</th><th>End</th><th>Checked-In</th><th>Actions</th></tr>
+</thead>
+<tbody></tbody>
 </table>
 </div>
 
-<!-- Work Requests -->
-<div class="section" id="requests">
-<h2>Work Requests</h2>
-<ul id="workRequestsList"></ul>
+<div class="tab">
+<h3>Work Requests</h3>
+<table id="work-table">
+<thead><tr><th>Guest</th><th>Request</th><th>Date</th></tr></thead>
+<tbody></tbody>
+</table>
 </div>
 
-<!-- Messages -->
-<div class="section" id="messages">
-<h2>Guest Messages</h2>
-<ul id="messagesList"></ul>
-<input type="text" id="newMessageText" placeholder="Send new message to guest">
-<button id="sendNewMessageBtn">Send Message</button>
+<div class="tab">
+<h3>Messages</h3>
+<table id="message-table">
+<thead><tr><th>Guest</th><th>Message</th><th>Date</th></tr></thead>
+<tbody></tbody>
+</table>
 </div>
 
-<!-- Controls -->
-<div class="section" id="controls">
-<h2>Controls</h2>
-<button id="lockTabletBtn">Lock Tablet</button>
-<button id="unlockTabletBtn">Unlock Tablet</button>
+<div class="tab">
+<h3>Controls</h3>
+<button id="lock-btn">Lock Tablet</button>
+<button id="unlock-btn">Unlock Tablet</button>
 </div>
 
-</div>
+<script>
+const supabaseUrl='https://ofnlpqfscyecatetnuqi.supabase.co';
+const supabaseKey='sb_publishable_jjdmHkgGrbjqYwY14kS9ng_Ivuq-Pjc';
+const supabase = supabase.createClient(supabaseUrl,supabaseKey);
 
-<script type="module">
-import { createClient } from 'https://cdn.jsdelivr.net/npm/@supabase/supabase-js/+esm';
-const SUPABASE_URL = 'https://ofnlpqfscyecatetnuqi.supabase.co';
-const SUPABASE_KEY = 'sb_publishable_jjdmHkgGrbjqYwY14kS9ng_Ivuq-Pjc';
-const supabase = createClient(SUPABASE_URL,SUPABASE_KEY);
-
-const tabs = document.querySelectorAll('.tab');
-tabs.forEach(tab=>{
-  tab.onclick=()=>{
-    tabs.forEach(t=>t.classList.remove('active'));
-    document.querySelectorAll('.section').forEach(s=>s.classList.remove('active'));
-    tab.classList.add('active');
-    document.getElementById(tab.dataset.tab).classList.add('active');
-  }
-});
-
-const guestTable = document.getElementById('guestsTable');
-const workRequestsList = document.getElementById('workRequestsList');
-const messagesList = document.getElementById('messagesList');
-
-// Load guests
 async function loadGuests(){
-  const { data } = await supabase.from('guests').select('*').order('start_date',{ascending:true});
-  guestTable.innerHTML=`<tr><th>Last Name</th><th>Start</th><th>End</th><th>Days Left</th><th>Actions</th></tr>`;
-  const today = new Date();
-  data.forEach(g=>{
-    const start = new Date(g.start_date), end = new Date(g.end_date);
-    const daysLeft = Math.max(0,Math.ceil((end-today)/(1000*60*60*24))+1);
-    const row=document.createElement('tr');
-    row.innerHTML=`<td>${g.guest_last_name}</td>
-    <td>${g.start_date}</td>
-    <td>${g.end_date}</td>
-    <td>${daysLeft}</td>
-    <td>
-      <button onclick="extendGuest(${g.id})">Extend</button>
-      <button onclick="shortenGuest(${g.id})">Shorten</button>
-      <button onclick="cancelGuest(${g.id})">Cancel</button>
-    </td>`;
-    guestTable.appendChild(row);
-  });
-}
-loadGuests();
-
-// Add Guest
-document.getElementById('addGuestBtn').onclick=async()=>{
-  const lastName=document.getElementById('guestLastName').value.trim();
-  const start=document.getElementById('startDate').value;
-  const end=document.getElementById('endDate').value;
-  if(!lastName||!start||!end){document.getElementById('guestStatus').innerText="Please fill all fields";return;}
-  await supabase.from('guests').insert([{guest_last_name:lastName,start_date:start,end_date:end,active:true}]);
-  document.getElementById('guestStatus').innerText="Guest added!";
-  loadGuests();
+    const {data}=await supabase.from('guests').select('*').order('start_date',{ascending:true});
+    const tbody=document.querySelector('#guest-table tbody');
+    tbody.innerHTML="";
+    data.forEach(g=>{
+        const tr=document.createElement('tr');
+        tr.innerHTML=`<td>${g.guest_last_name}</td><td>${g.start_date}</td><td>${g.end_date}</td><td>${g.checked_in}</td>
+        <td>
+        <button onclick="cancelGuest(${g.id})">Cancel</button>
+        <button onclick="extendGuest(${g.id})">Extend</button>
+        </td>`;
+        tbody.appendChild(tr);
+    });
 }
 
-// Extend / Shorten / Cancel
-window.extendGuest=async(id)=>{
-  const days=parseInt(prompt("Enter days to extend:"));
-  if(isNaN(days)||days<=0) return;
-  const { data:guest }=await supabase.from('guests').select('*').eq('id',id).single();
-  const newEnd=new Date(guest.end_date);newEnd.setDate(newEnd.getDate()+days);
-  await supabase.from('guests').update({end_date:newEnd.toISOString().slice(0,10)}).eq('id',id);
-  loadGuests();
-}
-window.shortenGuest=async(id)=>{
-  const days=parseInt(prompt("Enter days to shorten:"));
-  if(isNaN(days)||days<=0) return;
-  const { data:guest }=await supabase.from('guests').select('*').eq('id',id).single();
-  const newEnd=new Date(guest.end_date);newEnd.setDate(newEnd.getDate()-days);
-  await supabase.from('guests').update({end_date:newEnd.toISOString().slice(0,10)}).eq('id',id);
-  loadGuests();
-}
-window.cancelGuest=async(id)=>{
-  if(!confirm("Cancel guest? This will delete messages & requests.")) return;
-  await supabase.from('guests').delete().eq('id',id);
-  await supabase.from('work_requests').delete().eq('guest_id',id);
-  await supabase.from('messages').delete().eq('guest_id',id);
-  loadGuests(); loadMessages(); loadWorkRequests();
-}
-
-// Load Work Requests
 async function loadWorkRequests(){
-  const { data } = await supabase.from('work_requests').select('*,guest_id(guest_last_name)').order('date',{ascending:true});
-  workRequestsList.innerHTML='';
-  data.forEach(r=>{
-    const li=document.createElement('li');
-    li.textContent=`${r.guest_id.guest_last_name}: ${r.request_text} (${new Date(r.date).toLocaleString()})`;
-    workRequestsList.appendChild(li);
-  });
+    const {data}=await supabase.from('work_requests').select('*,guest_id(guest_last_name)').order('date',{ascending:true});
+    const tbody=document.querySelector('#work-table tbody');
+    tbody.innerHTML="";
+    data.forEach(w=>{
+        const tr=document.createElement('tr');
+        tr.innerHTML=`<td>${w.guest_id.guest_last_name}</td><td>${w.request_text}</td><td>${new Date(w.date).toLocaleString()}</td>`;
+        tbody.appendChild(tr);
+    });
 }
-loadWorkRequests();
 
-// Load Messages
 async function loadMessages(){
-  const { data }=await supabase.from('messages').select('*,guest_id(guest_last_name)').order('date',{ascending:true});
-  messagesList.innerHTML='';
-  data.forEach(m=>{
-    const li=document.createElement('li');
-    li.textContent=`${m.guest_id.guest_last_name}: ${m.message_text}`;
-    messagesList.appendChild(li);
-  });
+    const {data}=await supabase.from('messages').select('*,guest_id(guest_last_name)').order('date',{ascending:true});
+    const tbody=document.querySelector('#message-table tbody');
+    tbody.innerHTML="";
+    data.forEach(m=>{
+        const tr=document.createElement('tr');
+        tr.innerHTML=`<td>${m.guest_id.guest_last_name}</td><td>${m.message_text}</td><td>${new Date(m.date).toLocaleString()}</td>`;
+        tbody.appendChild(tr);
+    });
 }
 
-// Send new message
-document.getElementById('sendNewMessageBtn').onclick=async()=>{
-  const text=document.getElementById('newMessageText').value.trim();
-  if(!text){alert("Enter message");return;}
-  const { data:guestList } = await supabase.from('guests').select('*').eq('active',true);
-  if(!guestList.length){alert("No active guests"); return;}
-  const guestId=guestList[0].id;
-  await supabase.from('messages').insert([{guest_id:guestId,message_text:text,date:new Date().toISOString()}]);
-  document.getElementById('newMessageText').value='';
-  loadMessages();
+async function cancelGuest(id){
+    await supabase.from('guests').delete().eq('id',id);
+    loadGuests();
 }
 
-// Controls: Lock / Unlock
-document.getElementById('lockTabletBtn').onclick=async()=>{
-  await supabase.from('guests').update({verification_status:'locked'}).eq('active',true);
-  alert("Tablet locked for all guests");
-}
-document.getElementById('unlockTabletBtn').onclick=async()=>{
-  await supabase.from('guests').update({verification_status:'pending'}).eq('active',true);
-  alert("Tablet unlocked for all guests");
+async function extendGuest(id){
+    const days = prompt("Enter number of days to extend:");
+    if(!days || isNaN(days)) return;
+    const guest=await supabase.from('guests').select('*').eq('id',id).single();
+    let newEnd=new Date(guest.data.end_date);
+    newEnd.setDate(newEnd.getDate()+parseInt(days));
+    await supabase.from('guests').update({end_date:newEnd.toISOString().split('T')[0]}).eq('id',id);
+    loadGuests();
 }
 
-// Auto-cleanup
-setInterval(async()=>{
-  const today=new Date().toISOString().slice(0,10);
-  const { data }=await supabase.from('guests').select('*').eq('active',true);
-  for(const g of data){
-    if(today>g.end_date){
-      await supabase.from('guests').update({active:false}).eq('id',g.id);
-      await supabase.from('work_requests').delete().eq('guest_id',g.id);
-      await supabase.from('messages').delete().eq('guest_id',g.id);
-    }
-  }
-  loadGuests(); loadMessages(); loadWorkRequests();
-},60000);
+document.getElementById('add-guest-btn').onclick=async ()=>{
+    const ln=document.getElementById('guest-lastname').value;
+    const sd=document.getElementById('start-date').value;
+    const ed=document.getElementById('end-date').value;
+    if(!ln || !sd || !ed) return alert("Fill all fields");
+    await supabase.from('guests').insert({guest_last_name:ln,start_date:sd,end_date:ed});
+    document.getElementById('guest-lastname').value="";
+    document.getElementById('start-date').value="";
+    document.getElementById('end-date').value="";
+    loadGuests();
+}
+
+document.getElementById('lock-btn').onclick=async ()=>{
+    await supabase.from('controls').update({tablet_locked:true}).eq('id',1);
+    alert("Tablet locked");
+}
+document.getElementById('unlock-btn').onclick=async ()=>{
+    await supabase.from('controls').update({tablet_locked:false}).eq('id',1);
+    alert("Tablet unlocked");
+}
+
+loadGuests();
+loadWorkRequests();
+loadMessages();
 </script>
+</main>
 </body>
 </html>
