--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Beach House Guest Dashboard v3.0</title>
+<title>Beach House Guest Dashboard v1.0</title>
 <style>
-body { margin:0; padding:0; font-family: Arial; background:#e0f7ff; display:flex; flex-direction:column; align-items:center; min-height:100vh;}
-header { width:100%; background:#00aaff; color:white; padding:15px; text-align:center; font-size:24px;}
-main { flex:1; width:100%; max-width:600px; padding:20px; display:flex; flex-direction:column; gap:15px;}
+body { margin:0; font-family:Arial; background:#e0f7ff; display:flex; flex-direction:column; min-height:100vh;}
+header { background:#00aaff; color:white; padding:15px; text-align:center; font-size:24px;}
+main { flex:1; max-width:600px; margin:auto; padding:20px; display:flex; flex-direction:column; gap:15px;}
 button { background:#00aaff; color:white; border:none; padding:10px; border-radius:6px; cursor:pointer;}
 input, textarea { width:100%; padding:8px; border-radius:5px; border:1px solid #ccc;}
 .message-app { border:1px solid #00aaff; border-radius:6px; padding:10px; max-height:200px; overflow-y:auto; background:white;}
@@ -14,7 +14,7 @@ input, textarea { width:100%; padding:8px; border-radius:5px; border:1px solid #
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 </head>
 <body>
-<header>Beach House Dashboard v3.0</header>
+<header>Beach House Guest Dashboard</header>
 <main>
 <div id="welcome"></div>
 
@@ -57,7 +57,7 @@ async function loadGuest() {
 
     const welcomeDiv = document.getElementById('welcome');
     if(!data || data.length===0){
-        welcomeDiv.innerText = "No scheduled guests today.";
+        welcomeDiv.innerText = "No guests scheduled today.";
         return;
     }
 
@@ -88,7 +88,7 @@ async function loadGuest() {
 function loadGuestDetails(){
     const today = new Date();
     const end = new Date(guestData.end_date);
-    const diff = Math.ceil((end-today)/(1000*60*60*24));
+    const diff = Math.ceil((end-today)/(1000*60*60*24))+1;
     document.getElementById('days-left').innerText = diff>=0 ? diff : 0;
     loadMessages();
 }
@@ -98,7 +98,7 @@ async function loadMessages(){
         .from('messages')
         .select('*')
         .eq('guest_id', guestData.id)
-        .order('date', {ascending:true});
+        .order('created_at', {ascending:true});
     const messagesDiv = document.getElementById('messages');
     messagesDiv.innerHTML = "";
     data.forEach(m=>{
