--- a/admin.html
+++ b/admin.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Beach House Admin v1.0</title>
+<title>Beach House Admin v2.0</title>
 <style>
 body{margin:0;font-family:Arial;background:#e0f7ff;}
 header{background:#0077cc;color:white;padding:15px;text-align:center;font-size:24px;}
@@ -11,31 +11,38 @@ button{background:#0077cc;color:white;border:none;padding:8px 12px;border-radius
 input,textarea,select{padding:6px;border-radius:4px;border:1px solid #ccc;width:100%;}
 table{width:100%;border-collapse:collapse;}
 th,td{border:1px solid #0077cc;padding:6px;text-align:left;}
+.tabs { display:flex; gap:10px; margin-bottom:10px;}
+.tab { padding:8px 12px; background:#0077cc; color:white; cursor:pointer; border-radius:5px;}
+.tab-content { display:none; }
+.tab-content.active { display:block; }
 </style>
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 </head>
 <body>
 <header>Beach House Admin</header>
 <main>
-<div>
+<div class="tabs">
+    <div class="tab" data-tab="guests">Guests</div>
+    <div class="tab" data-tab="work">Work Requests</div>
+    <div class="tab" data-tab="messages">Messages</div>
+    <div class="tab" data-tab="controls">Controls</div>
+</div>
+
+<div id="guests" class="tab-content">
 <h3>Schedule Guest</h3>
 <input id="guest-lastname" placeholder="Guest Last Name">
 <input type="date" id="start-date">
 <input type="date" id="end-date">
 <button id="add-guest-btn">Add Guest</button>
-</div>
 
-<div>
 <h3>Current Guests</h3>
 <table id="guest-table">
-<thead>
-<tr><th>Last Name</th><th>Start</th><th>End</th><th>Checked-In</th><th>Actions</th></tr>
-</thead>
+<thead><tr><th>Last Name</th><th>Start</th><th>End</th><th>Checked-In</th><th>Actions</th></tr></thead>
 <tbody></tbody>
 </table>
 </div>
 
-<div>
+<div id="work" class="tab-content">
 <h3>Work Requests</h3>
 <table id="work-table">
 <thead><tr><th>Guest</th><th>Request</th><th>Date</th></tr></thead>
@@ -43,7 +50,7 @@ th,td{border:1px solid #0077cc;padding:6px;text-align:left;}
 </table>
 </div>
 
-<div>
+<div id="messages" class="tab-content">
 <h3>Messages</h3>
 <table id="message-table">
 <thead><tr><th>Guest</th><th>Message</th><th>Date</th></tr></thead>
@@ -51,93 +58,105 @@ th,td{border:1px solid #0077cc;padding:6px;text-align:left;}
 </table>
 </div>
 
-<div>
-<h3>Controls</h3>
+<div id="controls" class="tab-content">
+<h3>Tablet Controls</h3>
 <button id="lock-btn">Lock Tablet</button>
 <button id="unlock-btn">Unlock Tablet</button>
 </div>
 
 <script>
-const supabaseUrl='https://ofnlpqfscyecatetnuqi.supabase.co';
-const supabaseKey='sb_publishable_jjdmHkgGrbjqYwY14kS9ng_Ivuq-Pjc';
-const supabase = supabase.createClient(supabaseUrl,supabaseKey);
+window.addEventListener('DOMContentLoaded', async () => {
+    const supabaseUrl='https://ofnlpqfscyecatetnuqi.supabase.co';
+    const supabaseKey='sb_publishable_jjdmHkgGrbjqYwY14kS9ng_Ivuq-Pjc';
+    window.supabase = window.supabase || supabase.createClient(supabaseUrl,supabaseKey);
 
-async function loadGuests(){
-    const {data}=await supabase.from('guests').select('*').order('start_date',{ascending:true});
-    const tbody=document.querySelector('#guest-table tbody');
-    tbody.innerHTML="";
-    data.forEach(g=>{
-        const tr=document.createElement('tr');
-        tr.innerHTML=`<td>${g.guest_last_name}</td><td>${g.start_date}</td><td>${g.end_date}</td><td>${g.checked_in}</td>
-        <td>
-        <button onclick="cancelGuest(${g.id})">Cancel</button>
-        <button onclick="extendGuest(${g.id})">Extend</button>
-        </td>`;
-        tbody.appendChild(tr);
+    const tabs = document.querySelectorAll('.tab');
+    const tabContents = document.querySelectorAll('.tab-content');
+    tabs.forEach(tab=>{
+        tab.onclick = ()=>{
+            tabContents.forEach(c=>c.classList.remove('active'));
+            document.getElementById(tab.dataset.tab).classList.add('active');
+        }
     });
-}
+    tabs[0].click(); // activate first tab
 
-async function loadWorkRequests(){
-    const {data}=await supabase.from('work_requests').select('*,guest_id(guest_last_name)').order('created_at',{ascending:true});
-    const tbody=document.querySelector('#work-table tbody');
-    tbody.innerHTML="";
-    data.forEach(w=>{
-        const tr=document.createElement('tr');
-        tr.innerHTML=`<td>${w.guest_id.guest_last_name}</td><td>${w.request_text}</td><td>${new Date(w.created_at).toLocaleString()}</td>`;
-        tbody.appendChild(tr);
-    });
-}
+    async function loadGuests(){
+        const {data}=await supabase.from('guests').select('*').order('start_date',{ascending:true});
+        const tbody=document.querySelector('#guest-table tbody');
+        tbody.innerHTML="";
+        data.forEach(g=>{
+            const tr=document.createElement('tr');
+            tr.innerHTML=`<td>${g.guest_last_name}</td><td>${g.start_date}</td><td>${g.end_date}</td><td>${g.checked_in}</td>
+            <td>
+            <button onclick="cancelGuest(${g.id})">Cancel</button>
+            <button onclick="extendGuest(${g.id})">Extend</button>
+            </td>`;
+            tbody.appendChild(tr);
+        });
+    }
 
-async function loadMessages(){
-    const {data}=await supabase.from('messages').select('*,guest_id(guest_last_name)').order('created_at',{ascending:true});
-    const tbody=document.querySelector('#message-table tbody');
-    tbody.innerHTML="";
-    data.forEach(m=>{
-        const tr=document.createElement('tr');
-        tr.innerHTML=`<td>${m.guest_id.guest_last_name}</td><td>${m.message_text}</td><td>${new Date(m.created_at).toLocaleString()}</td>`;
-        tbody.appendChild(tr);
-    });
-}
+    async function loadWorkRequests(){
+        const {data}=await supabase.from('work_requests').select('*,guest_id(guest_last_name)').order('created_at',{ascending:true});
+        const tbody=document.querySelector('#work-table tbody');
+        tbody.innerHTML="";
+        data.forEach(w=>{
+            const tr=document.createElement('tr');
+            tr.innerHTML=`<td>${w.guest_id.guest_last_name}</td><td>${w.request_text}</td><td>${new Date(w.created_at).toLocaleString()}</td>`;
+            tbody.appendChild(tr);
+        });
+    }
 
-async function cancelGuest(id){
-    await supabase.from('guests').delete().eq('id',id);
+    async function loadMessages(){
+        const {data}=await supabase.from('messages').select('*,guest_id(guest_last_name)').order('created_at',{ascending:true});
+        const tbody=document.querySelector('#message-table tbody');
+        tbody.innerHTML="";
+        data.forEach(m=>{
+            const tr=document.createElement('tr');
+            tr.innerHTML=`<td>${m.guest_id.guest_last_name}</td><td>${m.message_text}</td><td>${new Date(m.created_at).toLocaleString()}</td>`;
+            tbody.appendChild(tr);
+        });
+    }
+
+    window.cancelGuest = async (id)=>{
+        await supabase.from('guests').delete().eq('id',id);
+        loadGuests();
+    }
+
+    window.extendGuest = async (id)=>{
+        const days = prompt("Enter number of days to extend:");
+        if(!days || isNaN(days)) return;
+        const guest=await supabase.from('guests').select('*').eq('id',id).single();
+        let newEnd=new Date(guest.data.end_date);
+        newEnd.setDate(newEnd.getDate()+parseInt(days));
+        await supabase.from('guests').update({end_date:newEnd.toISOString().split('T')[0]}).eq('id',id);
+        loadGuests();
+    }
+
+    document.getElementById('add-guest-btn').onclick=async ()=>{
+        const ln=document.getElementById('guest-lastname').value;
+        const sd=document.getElementById('start-date').value;
+        const ed=document.getElementById('end-date').value;
+        if(!ln || !sd || !ed) return alert("Fill all fields");
+        await supabase.from('guests').insert({guest_last_name:ln,start_date:sd,end_date:ed});
+        document.getElementById('guest-lastname').value="";
+        document.getElementById('start-date').value="";
+        document.getElementById('end-date').value="";
+        loadGuests();
+    }
+
+    document.getElementById('lock-btn').onclick=async ()=>{
+        await supabase.from('controls').update({tablet_locked:true}).eq('id',1);
+        alert("Tablet locked");
+    }
+    document.getElementById('unlock-btn').onclick=async ()=>{
+        await supabase.from('controls').update({tablet_locked:false}).eq('id',1);
+        alert("Tablet unlocked");
+    }
+
     loadGuests();
-}
-
-async function extendGuest(id){
-    const days = prompt("Enter number of days to extend:");
-    if(!days || isNaN(days)) return;
-    const guest=await supabase.from('guests').select('*').eq('id',id).single();
-    let newEnd=new Date(guest.data.end_date);
-    newEnd.setDate(newEnd.getDate()+parseInt(days));
-    await supabase.from('guests').update({end_date:newEnd.toISOString().split('T')[0]}).eq('id',id);
-    loadGuests();
-}
-
-document.getElementById('add-guest-btn').onclick=async ()=>{
-    const ln=document.getElementById('guest-lastname').value;
-    const sd=document.getElementById('start-date').value;
-    const ed=document.getElementById('end-date').value;
-    if(!ln || !sd || !ed) return alert("Fill all fields");
-    await supabase.from('guests').insert({guest_last_name:ln,start_date:sd,end_date:ed});
-    document.getElementById('guest-lastname').value="";
-    document.getElementById('start-date').value="";
-    document.getElementById('end-date').value="";
-    loadGuests();
-}
-
-document.getElementById('lock-btn').onclick=async ()=>{
-    await supabase.from('controls').update({tablet_locked:true}).eq('id',1);
-    alert("Tablet locked");
-}
-document.getElementById('unlock-btn').onclick=async ()=>{
-    await supabase.from('controls').update({tablet_locked:false}).eq('id',1);
-    alert("Tablet unlocked");
-}
-
-loadGuests();
-loadWorkRequests();
-loadMessages();
+    loadWorkRequests();
+    loadMessages();
+});
 </script>
 </main>
 </body>
